option(
  'codegen_path',
  type: 'string',
  value: '',
  description: 'Path to gentest_codegen (absolute path, or relative to the project root)',
)

option(
  'codegen_host_clang',
  type: 'string',
  value: '',
  description: 'Path to the host Clang executable for gentest_codegen (absolute path, or relative to the project root)',
)

option(
  'codegen_clang_scan_deps',
  type: 'string',
  value: '',
  description: 'Path to clang-scan-deps for gentest_codegen (absolute path, or relative to the project root)',
)

option(
  'build_self_tests',
  type: 'boolean',
  value: true,
  description: 'Build gentest\'s repo-local Meson self-tests and consumer fixture',
)
